--- a/Bitmex.NET/Bitmex.NET.csproj
+++ b/Bitmex.NET/Bitmex.NET.csproj
@@ -1,11 +1,9 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
-
   <PropertyGroup>
     <TargetFrameworks>netstandard2.0;netstandard2.1</TargetFrameworks>
     <Authors>Vladimir Semashkin</Authors>
     <PackageLicenseUrl>https://github.com/semashkinvg/Bitmex.NET/blob/master/LICENSE</PackageLicenseUrl>
-    <PackageProjectUrl>https://github.com/semashkinvg/Bitmex.NET</PackageProjectUrl>
-    <PackageIconUrl>https://github.com/semashkinvg/Bitmex.NET/blob/master/default.png</PackageIconUrl>
+    <PackageProjectUrl>https://github.com/semashkinvg/Bitmex.NET</PackageProjectUrl> 
     <RepositoryUrl>https://github.com/semashkinvg/Bitmex.NET/</RepositoryUrl>
     <Description>Wrapper for BitMEX.com API (REST &amp; WebSocket)</Description>
     <PackageReleaseNotes>See release notes here https://github.com/semashkinvg/Bitmex.NET/blob/master/releasenotes.md</PackageReleaseNotes>
@@ -14,19 +12,15 @@
     <PackageTags>BitMEX REST API WebSocket Cryptocurrency ExchangeApi CSharp StockApi Trades Quotes Wrapper Position Instrument CurrencyPair</PackageTags>
     <Version>2.0.1.0</Version>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+    <LangVersion>8.0</LangVersion>
+    <Nullable>enable</Nullable>
+    <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
   </PropertyGroup>
 
-  <!--<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
-    <DefineConstants>TRACE;DEBUG;NETSTANDARD2_0</DefineConstants>
-    --><!--<DefineConstants Condition=" '$(TargetFrameworkVersion)' == 'netstandard2.0' ">NETSTANDARD2_0</DefineConstants>
-    <DefineConstants Condition=" '$(TargetFrameworkVersion)' == 'netstandard2.1' ">NETSTANDARD2_1</DefineConstants>--><!--
-
-  </PropertyGroup>-->
- 
   <ItemGroup>
-    <Compile Remove="Models\Socket\Requests\**" />
-    <EmbeddedResource Remove="Models\Socket\Requests\**" />
-    <None Remove="Models\Socket\Requests\**" />
+    <Compile Remove="README\**" />
+    <EmbeddedResource Remove="README\**" />
+    <None Remove="README\**" />
   </ItemGroup>
 
   <ItemGroup>
